# petrosa-cio

./: .bandit  .coverage  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  Dockerfile  Makefile  README.md  bandit-report.json  coverage.xml  env.example  main.py  mock_data_manager.py  otel_init.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  test_throttling.py
.github/: CODEOWNERS
.github/workflows/: ci-checks.yml  ci.yml  copilot-review-gate.yml  deploy.yml  manual-deploy.yml  request-copilot-review.yml
apps/: __init__.py
apps/nurse/: __init__.py  alert_distiller.py  enforcer.py  guard.py  roi_engine.py  roi_logger.py
apps/strategist/: __init__.py  (+3 more)
canary/: encrypt_keys.py  nuclear_option.py
cio/: defaults.py  main.py  mcp_server.py  memory.py
contracts/: signal.py  trading_config.py
core/: config_manager.py  probe.py
docs/: ARCHITECTURE.md  CIO_REVAMP_PLAN.md  CI_CD_PIPELINE.md  CONTRACTS.md  EMERGENCY_OPERATIONS.md  EPICS.md  HEARTBEAT_SPEC.md  IMPLEMENTATION_PLAN.md  INDEX.md  MAKEFILE.md  MCP_TOOLS.md  PRD.md
k8s/: configmap.yaml  deployment.yaml  service.yaml
scripts/: check-test-assertions.py  measure_arbiter_suppression.py  simulate_intent.py  simulate_test_intent.py  verify_all_fixes.py  verify_live_heartbeat.py
tests/: conftest.py  test_alerting.py  test_contracts.py  test_governance_api.py  test_guard.py  test_heartbeat.py  test_interceptor.py  test_mcp_server.py  test_memory.py  test_nuclear_option.py  test_probe.py  test_roi_engine.py  test_schema_parser.py  test_trading_config_manager.py
(+148 files in other folders)
