[project]
name = "petrosa-cio"
version = "1.0.0"
description = "Autonomous trading intelligence and strategy controller"
authors = [{name = "Petrosa Systems"}]
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Small isolated unit tests",
    "integration: End-to-end reasoning loop tests",
]
